<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vetraz Center</string>
    <string name="illegal_arg_message">Argument Must be one of the Following:\n{\n MaterialNavigationView.ITEM_STYLE_ROUND_RIGHT or\n MaterialNavigationView.ITEM_STYLE_ROUND_RECTANGLE\n}</string>
    <string name="category">Поиск по категориям</string>
    <string name="favorites">Мои курсы</string>
    <string name="contacts">Контакты</string>
    <string name="social_media">Мы в соц. сетях</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">Youtube</string>
    <string name="url_youtube">https://www.youtube.com/channel/UCELloWoD76hMPixNeF_YiCw/featured</string>
    <string name="url_instagram">https://www.instagram.com/vetraz_official</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_drawer_header_title">Ветразь</string>
    <string name="nav_drawer_header_description">Центр дополнительного образования детей и молодежи г.Минска</string>
    <string name="about_us">О центре</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_next">button next</string>
    <string name="buttom_next">buttom_next</string>
    <string name="onboarding_image">onBoarding image</string>
    <string name="circle1_background" tools:ignore="Typos">circle1_background</string>
    <string name="circle2_background">circle2 background</string>
    <string name="on_boarding_title1">Талантливые дети</string>
    <string name="on_boarding_title2">Лучшие педагоги</string>
    <string name="on_boarding_title3">Увлекательные занятия</string>
    <string name="phone_main_office">+375 17 360 03 35</string>
    <string name="sputnik_club">КМЖ \"Спутник\"</string>
    <string name="ecolog_club">КМЖ \"Эколог\"</string>
    <string name="main_office">Главный офис</string>
    <string name="main_office_address">ул.Чкалова д.1 к.4</string>
    <string name="courses_info_title">Информация о кружках:</string>
    <string name="director">Директор:</string>
    <string name="phone_director">+375 17 377 53 06</string>
    <string name="reception_title">Приемная:</string>
    <string name="reception_main_office_phone">+375 17 375 19 64</string>
    <string name="open_map">Открыть карты</string>
    <string name="office_2">Корпус №2</string>
    <string name="office2_address">ул.Ландера, 6а</string>
    <string name="office2_phone">+375 17 352 00 23</string>
    <string name="clubs">Клубы</string>
    <string name="sputnic_address">ул.Левкова д.8 к.2</string>
    <string name="sputnic_phone">+375 17 323 23 29</string>
    <string name="ecolog_address">ул.Бакинская д.20</string>
    <string name="ecolog_phone">+375 17 351 87 15</string>
</resources>