<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_saved"
        android:name="com.example.vetrazcenter.presentation.saved.SavedCoursesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_saved_courses" >
        <action
            android:id="@+id/action_nav_saved_to_courseFragment"
            app:destination="@id/courseFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.vetrazcenter.presentation.categories.CategoriesFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_nav_home_to_coursesListFragment"
            app:destination="@id/coursesListFragment" />
        <action
            android:id="@+id/action_nav_home_to_courseFragment"
            app:destination="@id/courseFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.example.vetrazcenter.presentation.contacts.ContactsFragment"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.vetrazcenter.presentation.about.AboutFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about" />
    <activity
        android:id="@+id/label_youtube"
        app:action="android.intent.action.VIEW"
        app:data="@string/url_youtube"
        tools:layout="@layout/app_bar_main" />
    <activity
        android:id="@+id/label_instagram"
        app:action="android.intent.action.VIEW"
        app:data="@string/url_instagram"
        tools:layout="@layout/app_bar_main" />
    <fragment
        android:id="@+id/coursesListFragment"
        android:name="com.example.vetrazcenter.presentation.courses.courses_list.CoursesListFragment"
        android:label="{categoryName}"
        tools:layout="@layout/fragment_courses_list" >
        <action
            android:id="@+id/action_coursesListFragment_to_courseFragment"
            app:destination="@id/courseFragment" />
        <argument
            android:name="categoryId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null"/>
        <argument
            android:name="categoryName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/courseFragment"
        android:name="com.example.vetrazcenter.presentation.courses.course.CourseFragment"
        android:label="{courseName}"
        tools:layout="@layout/fragment_course" >
        <argument
            android:name="courseName"
            app:argType="string" />
        <argument
            android:name="course"
            app:argType="com.example.vetrazcenter.data.model.local.courses.Course" />
    </fragment>

</navigation>