<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="40dp"
    tools:context=".presentation.categories.CategoriesFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        >


        <androidx.cardview.widget.CardView
            android:id="@+id/cvMainOffice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/main_office"
                    android:textColor="@color/on_background"
                    android:textSize="24sp" />

                <View
                    android:id="@+id/line1"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_office_address"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/courses_info_title"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvPhoneMainOffice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/phone_main_office"
                        android:textColor="@color/accent_text_variant"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/director"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvPhoneDirector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/phone_director"
                        android:textColor="@color/accent_text_variant"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reception_title"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvPhoneReseption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/reception_main_office_phone"
                        android:textColor="@color/accent_text_variant"
                        android:textSize="14sp" />

                </LinearLayout>


                <Button
                    android:id="@+id/btnOpenMapMainOffice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/baseline_location_on_24"
                    android:text="@string/open_map"
                    android:textColor="@color/secondary"
                    android:textSize="12sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvOffice2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/office_2"
                    android:textColor="@color/on_background"
                    android:textSize="24sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/office2_address"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvPhoneOffice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/office2_phone"
                    android:textColor="@color/accent_text_variant"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnOpenMapOffice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/baseline_location_on_24"
                    android:text="@string/open_map"
                    android:textColor="@color/secondary"
                    android:textSize="12sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clubs"
            android:fontFamily="sans-serif"
            android:textColor="@color/on_background"
            android:textSize="24sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/sputnik_club"
                    android:textColor="@color/on_background"
                    android:textSize="24sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sputnic_address"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvPhoneSputnik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sputnic_phone"
                    android:textColor="@color/accent_text_variant"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnOpenMapSputnik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/baseline_location_on_24"
                    android:text="@string/open_map"
                    android:textColor="@color/secondary"
                    android:textSize="12sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/ecolog_club"
                    android:textColor="@color/on_background"
                    android:textSize="24sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ecolog_address"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvPhoneEcolog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ecolog_phone"
                    android:textColor="@color/accent_text_variant"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnOpenMapEcolog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/baseline_location_on_24"
                    android:text="@string/open_map"
                    android:textColor="@color/secondary"
                    android:textSize="12sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>