<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onBoardingMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".presentation.onboarding.OnBoardingFragment"
    tools:ignore="MissingDefaultResource">


    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="344dp"
        android:layout_marginBottom="232dp"

        android:contentDescription="@string/circle1_background"
        android:src="@drawable/circle_3"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="360dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/circle1_background"
        android:src="@drawable/circle_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginEnd="276dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/circle2_background"
        android:src="@drawable/circle_4"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/onboarding_image"
        android:src="@drawable/onboarding"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />


    <LinearLayout
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/on_boarding_title1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/on_boarding_title2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/on_boarding_title3"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/buttonImageAnim2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/button_next"
        android:src="@drawable/circle_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageView
        android:id="@+id/buttonImageAnim1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/button_next"
        android:src="@drawable/circle_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageButton
        android:id="@+id/buttonNext"
        style="@style/Theme.VetrazCenter.ButtonStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/button_next"
        android:src="@drawable/baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="365dp" />

</androidx.constraintlayout.widget.ConstraintLayout>